# bowser

./: .env.example  .gitignore  CLAUDE.md  Makefile  README.md
collector/: main.py  pyproject.toml  scheduler.py  schema.py
collector/sources/: cardlink.py  crude.py  fx.py  mbie.py  mbie_stocks.py  news.py
collector/tests/: test_sources.py
frontend/: index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
frontend/src/: App.tsx  main.tsx
frontend/src/components/: AboutPage.tsx  CrudeChart.tsx  Footer.tsx  FuelSparkChart.tsx  FuelSupply.tsx  Hero.tsx  LastUpdated.tsx  Nav.tsx  NewsColumn.tsx  PumpPriceCards.tsx  RetailTrendChart.tsx  Sparkline.tsx  WaterfallChart.tsx
frontend/src/lib/: format.ts  snapshot.ts
frontend/src/styles/: global.css  layout.css  tokens.css
